projet_gl/src/test/deca/lexer/valid/multilinecomment.deca
// Description:
//    test lexer for multi-line comment.
//
// Resultats:
//    ok
//
// Historique:
//    cree le 10/01/2024

/*
this is a bloc of comments
*/