projet_gl/src/test/deca/lexer/invalid/incorrectComment.deca
// Description:
//    test lexer invalid for comment.
//
// Resultats:
//    line=10 token recognition error at: '''
//
// Historique:
//    cree le 10/01/2024

'/this is an incorrect comment